# graph-suite

./: .gitignore  .pre-commit-config.yaml  README.md  beautiful_graphs.dsl  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_bidirectional.py  test_curvature.py  test_parallel_edges.py
graphsuite/: __init__.py
graphsuite/core/: __init__.py  graph.py  io.py
graphsuite/dsl/: __init__.py  engine.py
graphsuite/gui/: __init__.py  algorithm_panel.py  analysis_panel.py  canvas.py  main_window.py  matrix_editor.py  style.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_dsl.py  test_graph.py
